--- a/Support/help.html
+++ b/Support/help.html
@@ -12,10 +12,14 @@
   	color: #FFFFFF;
   }
 
-  h4 {
-  	font-style: italic;
-  	margin-top: 1ex;
-  	margin-bottom: 1ex;
+  h2 {
+    color:#002B7F;
+    text-shadow:#A8B2CC 2px 2px;
+  }
+
+  h3 {
+    color:#002B7F;
+    text-shadow:#A8B2CC 2px 2px;
   }
 
   blockquote {
@@ -24,15 +28,13 @@
   	padding-left: 1em;
   }
 
-  code, pre {
-  	font-size: 95%;
-  	font-family: "LuxiMono", "Bitstream Vera Sans Mono", "Monaco", "Courier New", monospace;
-  	word-wrap: break-word;
-  	white-space: pre;
-  	white-space: pre-wrap;
-  	white-space: -moz-pre-wrap;
-  	white-space: -o-pre-wrap;
-  }
+  .maintainer {
+  	background: #F0F0F0;
+  	border-style: solid;
+  	border-color: #CCCABA;
+  	border-width: 1px;
+    font-family: "LuxiMono", "Bitstream Vera Sans Mono", "Monaco", "Courier New", monospace;  }
+  
 
   pre {
   	padding: 10px 10px 10px 20px;
@@ -59,8 +61,91 @@
 <hr />
 <h1>&nbsp;&nbsp;&nbsp;Get Bundles — Help</h1>
 <br />
+
 <center>
-<p>"Get Bundles" provides an easy to use interface to install available TextMates' bundles which are hosted on macromates' svn repositories and on github.com.
+<p style="font-size:13pt">"Get Bundles" provides an easy to use interface to install available TextMate's bundles which are hosted on macromates' svn repositories and on github.com.
 </p>
-<img src="images/img_gui.png">
 </center>
+
+<h2>1 Requirements</h2>
+<p>The computer has to be connected to the internet.</p>
+
+<h3>1.1 svn Repositories</h3>
+<p>In order to check out bundles hosted on a svn repository the underlying script makes usage of the UNIX command <code>svn</code>. On Mac OSX 10.5.x <code>svn</code> is pre-installed. On Mac OSX 10.4.x one has to install it in beforehand (<a href="http://www.collab.net/downloads/community/">here</a>). Furthermore the script recognizes if the user set TextMate's shell variable <code>TM_SVN</code>.</p>
+
+<h3>1.2 git Repositories</h3>
+<p>Bundles hosted as a git repository (<a href="http://git.or.cz/">a fast version control system</a>) can be also installed by downloading it as a zip archive. Thus it is not necessary to install <code>git</code>. If <code>git</code> is installed and the user did not check the option "using zip archive" in the Advanced Drawer <code>git</code> will be used to install the bundle(s). Furthermore the script recognizes if the user set TextMate's shell variable <code>TM_GIT</code>.</p>
+
+
+<h2>2 General Operating Mode</h2>
+<p>After invoking "Get Bundles" the script scans these repositories:
+<ul>
+  <li><a href="http://macromates.com/svn/Bundles/trunk/Bundles/">http://macromates.com/svn/Bundles/trunk/Bundles/</a> (Bundles <font color=blue>B</font>)</li>
+  <li><a href="http://macromates.com/svn/Bundles/trunk/Review/Bundles/">http://macromates.com/svn/Bundles/trunk/Review/Bundles/</a> (Review <font color=blue>R</font>)</li>
+  <li><a href="http://github.com/">http://github.com/</a> (GitHub <font color=blue>G</font>)</li>
+</ul><br>
+for TextMate bundles.
+<br><br>
+In order to increase the speed of scanning the svn repositories the descriptions are saved locally. If a new bundle was uploaded to a svn repository and the local copy of the descriptions will not find a matching description the user will be notified by a message to "Update the Descriptions". This can be done by invoking the gear action command "Update Descriptions". It is recommended to update the locally saved descriptions regularly due to the fact that the script will <b>not</b> recognize if a bundle description was changed meanwhile.
+<br><br>
+The descriptions of all bundles hosted on github.com will be scanned automatically.
+<br><br>
+The entire scanning process can be cancelled by hitting <code>ESC</code> or by clicking into the spinning wheel. The bundle list can be rescanned by the gear action command "Rescan Bundle List".
+<br><br>
+Once you have the list you can select one or more bundles and hit the <code>Install Bundles</code> button to install it/them. After installing TextMate will be forced to execute "Reload Bundles". The installation of a bundle or bundles can be cancelled by hitting <code>ESC</code> as long as the script will not install that bundle physically. If a given bundle has been already installed the script will ask you whether that bundle should really be installed. If the user commits it the "old" bundle will be renamed into "THE_BUNDLE_NAME.tmbundleTIMESTAMP" for safety reasons.
+<br><br>
+The default installation path is <code>~/Library/Application Support/TextMate/Pristine Copy/Bundles</code> (Users Lib Pristine). This path can be changed in the "Advanced Drawer" dialog (more detail in 3.2). Please note for svn repositories that the script will perform a clean svn checkout. In order to avoid certain conflicts it is recommended if the user wants to work with a given bundle via svn afterwards to change the installation to <code>~/Library/Application Support/TextMate/Bundles</code> (Users Lib Bundles). The same for installing bundles from github.com using <code>git</code>.
+<br><br>
+"Get Bundles" also allows you to do a complete svn checkout of TextMate's Support Library from <code>http://macromates.com/svn/Bundles/trunk/Support/</code> into <code>/Library/Application Support/TextMate</code>. It can be invoked by clicking at the "Update Support Folder" button in the "Advanced Drawer" dialog.
+<br><br>
+In order to close the "Get Bundles" dialog simply hit the "Close" button or press &#x2318;W.
+</p>
+
+
+<h2>3 Interface</h2>
+
+<h3>3.1 Main Dialog</h3>
+<img src="images/img_gui.png">
+<p align="right" style="color:#CCCABA"><small><i>Dialog on Mac OSX 10.4.x differs slightly</i></small></p>
+<br><br>
+
+<h4>Filtering/Searching</h4>
+You can use the search field to enter a search term. The search function will look for that search term as word initial part in "name" or "description" (for GitHub bundles also for authors) as you type. To sub-filter the list you can select one of these buttons<br><br>
+<img src="images/img_repo_filter.png">
+<br><br>
+to display only those bundles which are hosted on the selected repository.<br><br>
+
+
+
+<h4>Get Bundle Info</h4>
+<img src="images/img_info.png">
+<br><br>
+
+<h4>Gear Action Menu</h4>
+&nbsp;&nbsp;&nbsp;<img src="images/img_gear.png"><br>
+<img src="images/img_gear_menu.png">
+
+<h4>Message Field + Cancel current Task</h4>
+<img src="images/img_message.png">
+<br><br>
+
+
+<h4>Show Help</h4>
+<img src="images/img_help.png">
+<br><br>
+
+
+<h3>3.2 Advanced Drawer</h3>
+<img src="images/img_adv_drawer.png">
+<br><br>
+
+<h3>3.3 Activity Log Drawer</h3>
+<img src="images/img_act_log.png">
+<br><br>
+
+<h2>4 Bundle Maintainer</h2>
+<p><i><b>Date: Oct 07 2008</b></i><br><br>
+  <span class="maintainer">&nbsp;<br></span>
+  <span class="maintainer">&nbsp;&nbsp; - Hans-Jörg Bibiko <a href="mailto:bibiko@eva.mpg.de">bibiko@.eva.mpg.de</a>&nbsp;&nbsp;<br><br></span>
+  <span class="maintainer">&nbsp;<br><br></span>
+</p>
