• for compatibility reintroduced help.markdown • Help from Gear Menu will show up help.markdown as usual by using markdown_to_help.rb
git-svn-id: http://svn.textmate.org/trunk/Review/Bundles/GetBundles.tmbundle@10691 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Support/help.html
+++ b/Support/help.html
@@ -22,6 +22,10 @@
     text-shadow:#A8B2CC 2px 2px;
   }
 
+  h4 {
+    text-decoration:underline;
+  }
+
   blockquote {
   	font-style: italic;
   	margin: 1em 25px;
@@ -80,9 +84,9 @@
 <h2>2 General Operating Mode</h2>
 <p>After invoking "Get Bundles" the script scans these repositories:
 <ul>
-  <li><a href="http://macromates.com/svn/Bundles/trunk/Bundles/">http://macromates.com/svn/Bundles/trunk/Bundles/</a> (Bundles <font color=blue>B</font>)</li>
-  <li><a href="http://macromates.com/svn/Bundles/trunk/Review/Bundles/">http://macromates.com/svn/Bundles/trunk/Review/Bundles/</a> (Review <font color=blue>R</font>)</li>
-  <li><a href="http://github.com/">http://github.com/</a> (GitHub <font color=blue>G</font>)</li>
+  <li>&nbsp;<a href="http://macromates.com/svn/Bundles/trunk/Bundles/">http://macromates.com/svn/Bundles/trunk/Bundles/</a> (Bundles <font color=blue>B</font>)</li>
+  <li>&nbsp;<a href="http://macromates.com/svn/Bundles/trunk/Review/Bundles/">http://macromates.com/svn/Bundles/trunk/Review/Bundles/</a> (Review <font color=blue>R</font>)</li>
+  <li>&nbsp;<a href="http://github.com/">http://github.com/</a> (GitHub <font color=blue>G</font>)</li>
 </ul><br>
 for TextMate bundles.
 <br><br>
@@ -110,15 +114,24 @@ In order to close the "Get Bundles" dialog simply hit the "Close" button or pres
 <br><br>
 
 <h4>Filtering/Searching</h4>
-You can use the search field to enter a search term. The search function will look for that search term as word initial part in "name" or "description" (for GitHub bundles also for authors) as you type. To sub-filter the list you can select one of these buttons<br><br>
+You can use the search field to enter a search term. The search function will look for that search term as word initial part in "name" or "description" (for GitHub bundles also for "author") as you type. To sub-filter the list you can select one of these buttons<br><br>
 <img src="images/img_repo_filter.png">
 <br><br>
-to display only those bundles which are hosted on the selected repository.<br><br>
+to display only those bundles which are hosted on the selected repository:
+<ul>
+  <li>Bundles <font color=blue>B</font>: <a href="http://macromates.com/svn/Bundles/trunk/Bundles/">http://macromates.com/svn/Bundles/trunk/Bundles/</a></li>
+  <li>Review <font color=blue>R</font>: <a href="http://macromates.com/svn/Bundles/trunk/Review/Bundles/">http://macromates.com/svn/Bundles/trunk/Review/Bundles/</a></li>
+  <li>GitHub <font color=blue>G</font>: <a href="http://github.com/">http://github.com/</a></li>
+</ul><br>
+<br><br>
 
 
 
 <h4>Get Bundle Info</h4>
+To get more details about a selected bundle you can hit &#x2318;I or click at that button:<br><br>
 <img src="images/img_info.png">
+<br><br>
+This will open a new window containing available data.
 <br><br>
 
 <h4>Gear Action Menu</h4>
@@ -143,7 +156,10 @@ to display only those bundles which are hosted on the selected repository.<br><b
 <img src="images/img_act_log.png">
 <br><br>
 
-<h2>4 Bundle Maintainer</h2>
+<h2>4 Keyboard Shortcuts</h2>
+<br><br>
+
+<h2>5 Bundle Maintainer</h2>
 <p><i><b>Date: Oct 07 2008</b></i><br><br>
   <span class="maintainer">&nbsp;<br></span>
   <span class="maintainer">&nbsp;&nbsp; - Hans-Jörg Bibiko <a href="mailto:bibiko@eva.mpg.de">bibiko@.eva.mpg.de</a>&nbsp;&nbsp;<br><br></span>
